--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^3.7.1"
   }
 }
